--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,87 @@
 @tailwind components;
 @tailwind utilities;
 
+.contain {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  
+}
+
+.url-shortener {
+  background-color: #f5f5f5;
+  padding: 5rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.title {
+  font-size: 24px;
+  margin-bottom: 20px;
+  text-align: center;
+  padding: 20px;
+  font-weight: 700;
+}
+
+.input-container {
+  display: flex;
+  align-items: center;
+}
+
+.input {
+  flex: 1;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+.button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
+.loading {
+  margin-top: 20px;
+}
+
+.error {
+  margin-top: 20px;
+  color: #dc3545;
+}
+
+.shorten-link {
+  margin-top: 20px;
+}
+
+.copy-button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.copy-button.copied {
+  background-color: #28a745;
+}
+
+.copy-button:hover {
+  background-color: #0056b3;
+}
 
 /*FEATURES*/
 .info {
